enter the matrix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,14 @@ env:
 
 jobs:
   code-checks:
+    strategy:
+      matrix:
+        component:
+          - utils
+          - client
+          - snapi-frontend
+          - snapi-truffle
+          - snapi-client
     runs-on: self-hosted
     container:
       image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.6.2
@@ -25,6 +33,16 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v3
+      - name: headers
+        run: sbt headerCheckAll
+        working-directory: ${{ matrix.component}}
+      - name: scala fmt
+        run: sbt scalafmtCheckAll
+        working-directory: ${{ matrix.component}}
+      - name: java fmt
+        run: sbt javafmtCheckAll
+        working-directory: ${{ matrix.component}}
+
 
   tests:
     needs: code-checks
@@ -47,69 +65,24 @@ jobs:
         run: |
           deps/kiama/build.sh
           deps/scala-logging/build.sh
-      - name: utils headers
-        run: sbt headerCheckAll
-        working-directory: utils
-      - name: utils scala fmt
-        run: sbt scalafmtCheckAll
-        working-directory: utils
-      - name: utils java fmt
-        run: sbt javafmtCheckAll
-        working-directory: utils
       - name: build utils
-        working-directory: utils
         run: ./build.sh
-      - name: client headers
-        run: sbt headerCheckAll
-        working-directory: client
-      - name: client scala fmt
-        run: sbt scalafmtCheckAll
-        working-directory: client
-      - name: client java fmt
-        run: sbt javafmtCheckAll
-        working-directory: client
+        working-directory: utils
       - name: build client
+        run: ./build.sh
         working-directory: client
-        run: ./build.sh
-      - name: snapi-frontend headers
-        run: sbt headerCheckAll
-        working-directory: snapi-frontend
-      - name: snapi-frontend scala fmt
-        run: sbt scalafmtCheckAll
-        working-directory: snapi-frontend
-      - name: snapi-frontend java fmt
-        run: sbt javafmtCheckAll
-        working-directory: snapi-frontend
       - name: build snapi-frontend
+        run: ./build.sh
         working-directory: snapi-frontend
-        run: ./build.sh
-      - name: snapi-truffle headers
-        run: sbt headerCheckAll
-        working-directory: snapi-truffle
-      - name: snapi-truffle scala fmt
-        run: sbt scalafmtCheckAll
-        working-directory: snapi-truffle
-      - name: snapi-truffle java fmt
-        run: sbt javafmtCheckAll
-        working-directory: snapi-truffle
       - name: build snapi-truffle
+        run: ./build.sh
         working-directory: snapi-truffle
-        run: ./build.sh
-      - name: snapi-client headers
-        run: sbt headerCheckAll
-        working-directory: snapi-client
-      - name: snapi-client scala fmt
-        run: sbt scalafmtCheckAll
-        working-directory: snapi-client
-      - name: snapi-client java fmt
-        run: sbt javafmtCheckAll
-        working-directory: snapi-client
       - name: build snapi-client
-        working-directory: snapi-client
         run: ./build.sh
+        working-directory: snapi-client
       - name: utils doc
-        working-directory: utils
         run: sbt doc
+        working-directory: utils
       - name: client doc
         working-directory: client
         run: sbt doc
