fixup! adapt publish workflow

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ language/version
 extensions/version
 utils/version
 client/version
+snapi-client/version
+snapi-frontend/version
+snapi-truffle/version
