fixup! fixup! adapt publish workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -86,8 +86,12 @@ jobs:
         CI_SNAPSHOT_RELEASE: publish
     - name: evaluate produced version
       shell: bash
-      working-directory: 
-      run: echo "DYNVER=$(cat version)" >> $GITHUB_ENV
+      run: |
+        echo "UTILS_VER=$(cat utils/version)" >> $GITHUB_ENV
+        echo "CLIENT_VER=$(cat client/version)" >> $GITHUB_ENV
+        echo "SNAPI_FRONTEND_VER=$(cat snapi-frontend/version)" >> $GITHUB_ENV
+        echo "SNAPI_TRUFFLE_VER=$(cat snapi-truffle/version)" >> $GITHUB_ENV
+        echo "SNAPI_CLIENT=$(cat snapi-client/version)" >> $GITHUB_ENV
     - if: github.event_name == 'repository_dispatch'
       uses: peter-evans/create-or-update-comment@v2
       with:
@@ -95,7 +99,11 @@ jobs:
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > will publish version: ${{ env.DYNVER }}
+          > will publish utils version: ${{ env.UTILS_VER }}
+          > will publish client version: ${{ env.CLIENT_VER }}
+          > will publish snapi-frontend version: ${{ env.SNAPI_FRONTEND_VER }}
+          > will publish snapi-truffle version: ${{ env.SNAPI_TRUFFLE_VER }}
+          > will publish snapi-client version: ${{ env.SNAPI_CLIENT }}
         reactions: rocket
     - if: success() && github.event_name == 'push' && contains(github.ref, 'refs/tags/')
       uses: peter-evans/repository-dispatch@v2
