--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,12 +20,12 @@ jobs:
       JVM_OPTS:  -Xms2048M -Xmx2048M -Xss6M -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
     steps:
     - if: github.event_name != 'repository_dispatch'
-      name: Checkout caller ref
+      name: checkout caller ref
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
     - if: github.event_name == 'repository_dispatch'
-      name: Checkout for PR comment
+      name: checkout for PR comment
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -34,8 +34,55 @@ jobs:
       run: |
         deps/kiama/build.sh
         deps/scala-logging/build.sh
-    - run: sbt ci-release
-      working-directory: language
+    - name: build all
+      run: ./rebuild.sh
+    - name: sbt ci-release utils
+      run: sbt ci-release
+      working-directory: utils
+      env:
+        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        CI_CLEAN: clean
+        CI_RELEASE: publishSigned
+        CI_SNAPSHOT_RELEASE: publish
+    - name: sbt ci-release client
+      run: sbt ci-release
+      working-directory: client
+      env:
+        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        CI_CLEAN: clean
+        CI_RELEASE: publishSigned
+        CI_SNAPSHOT_RELEASE: publish
+    - name: sbt ci-release snapi-frontend
+      run: sbt ci-release
+      working-directory: snapi-frontend
+      env:
+        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        CI_CLEAN: clean
+        CI_RELEASE: publishSigned
+        CI_SNAPSHOT_RELEASE: publish
+    - name: sbt ci-release snapi-truffle
+      run: sbt ci-release
+      working-directory: snapi-truffle
+      env:
+        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        CI_CLEAN: clean
+        CI_RELEASE: publishSigned
+        CI_SNAPSHOT_RELEASE: publish
+    - name: sbt ci-release snapi-client
+      run: sbt ci-release
+      working-directory: snapi-client
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
@@ -46,8 +93,12 @@ jobs:
         CI_SNAPSHOT_RELEASE: publish
     - name: evaluate produced version
       shell: bash
-      working-directory: language
-      run: echo "DYNVER=$(cat version)" >> $GITHUB_ENV
+      run: |
+        echo "UTILS_VER=$(cat utils/version)" >> $GITHUB_ENV
+        echo "CLIENT_VER=$(cat client/version)" >> $GITHUB_ENV
+        echo "SNAPI_FRONTEND_VER=$(cat snapi-frontend/version)" >> $GITHUB_ENV
+        echo "SNAPI_TRUFFLE_VER=$(cat snapi-truffle/version)" >> $GITHUB_ENV
+        echo "SNAPI_CLIENT=$(cat snapi-client/version)" >> $GITHUB_ENV
     - if: github.event_name == 'repository_dispatch'
       uses: peter-evans/create-or-update-comment@v2
       with:
@@ -55,7 +106,11 @@ jobs:
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > will publish version: ${{ env.DYNVER }}
+          > will publish utils version: ${{ env.UTILS_VER  }}
+          > will publish client version: ${{ env.CLIENT_VER }}
+          > will publish snapi-frontend version: ${{ env.SNAPI_FRONTEND_VER }}
+          > will publish snapi-truffle version: ${{ env.SNAPI_TRUFFLE_VER }}
+          > will publish snapi-client version: ${{ env.SNAPI_CLIENT }}
         reactions: rocket
     - if: success() && github.event_name == 'push' && contains(github.ref, 'refs/tags/')
       uses: peter-evans/repository-dispatch@v2
