--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,8 @@ target/
 
 language/version
 extensions/version
+utils/version
+client/version
+snapi-client/version
+snapi-frontend/version
+snapi-truffle/version
