--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,7 @@ jobs:
         run: |
           deps/kiama/build.sh
           deps/scala-logging/build.sh
+          deps/jackson-module-scala/build.sh
       - name: utils headers
         run: sbt headerCheckAll
         working-directory: utils
