--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -8,14 +8,14 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <raw-launcher.version>1.0-SNAPSHOT</raw-launcher.version>
-        <raw-client.version>0.26.3+91-38b09a41-SNAPSHOT</raw-client.version>
-        <raw-snapi-client.version>0.26.3+91-38b09a41-SNAPSHOT</raw-snapi-client.version>
-        <raw-python-client.version>0.26.3+91-38b09a41-SNAPSHOT</raw-python-client.version>
+        <raw-client.version>0.26.3+1-36f7ef4e+20231115-1327-SNAPSHOT</raw-client.version>
+        <raw-snapi-client.version>0.26.3+1-36f7ef4e+20231115-1329-SNAPSHOT</raw-snapi-client.version>
+        <raw-python-client.version>0.26.3+1-36f7ef4e+20231115-1329-SNAPSHOT</raw-python-client.version>
     </properties>
 
     <groupId>com.raw-labs.com</groupId>
     <artifactId>raw-launcher</artifactId>
-    <version>0.26.3+91-38b09a41-SNAPSHOT</version>
+    <version>0.26.3+1-36f7ef4e+20231115-1329-SNAPSHOT</version>
 
     <dependencies>
         <!-- GraalVM Polyglot Dependency -->
