--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -4,16 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>raw-launcher</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <language.version>0.24.29+5-4b4243df-SNAPSHOT</language.version>
-        <extensions.version>0.24.29+5-4b4243df-SNAPSHOT</extensions.version>
+        <raw-launcher.version>1.0-SNAPSHOT</raw-launcher.version>
+        <raw-client.version>0.26.3+4-f7ff164e+20231115-1742-SNAPSHOT</raw-client.version>
+        <raw-snapi-client.version>0.26.3+4-f7ff164e+20231115-1744-SNAPSHOT</raw-snapi-client.version>
+        <raw-python-client.version>0.26.3+4-f7ff164e+20231115-1744-SNAPSHOT</raw-python-client.version>
     </properties>
+
+    <groupId>com.raw-labs.com</groupId>
+    <artifactId>raw-launcher</artifactId>
+    <version>0.26.3+4-f7ff164e+20231115-1744-SNAPSHOT</version>
 
     <dependencies>
         <!-- GraalVM Polyglot Dependency -->
@@ -23,24 +25,29 @@
             <version>23.1.0</version>
         </dependency>
         <dependency>
+            <groupId>com.raw-labs</groupId>
+            <artifactId>raw-client_2.12</artifactId>
+            <version>${raw-client.version}</version>
+        </dependency>
+        <!-- Language Dependencies -->
+        <dependency>
+            <groupId>com.raw-labs</groupId>
+            <artifactId>raw-snapi-client_2.12</artifactId>
+            <version>${raw-snapi-client.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.raw-labs</groupId>
+            <artifactId>raw-python-client_2.12</artifactId>
+            <version>${raw-python-client.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.graalvm.polyglot</groupId>
             <artifactId>python</artifactId>
             <version>23.1.0</version>
             <scope>runtime</scope>
             <type>pom</type>
-        </dependency>
-        <!-- Raw Language Dependencies -->
-        <dependency>
-            <groupId>com.raw-labs</groupId>
-            <artifactId>raw-language_2.12</artifactId>
-            <version>${language.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.raw-labs</groupId>
-            <artifactId>raw-language-extensions_2.12</artifactId>
-            <version>${extensions.version}</version>
-            <scope>runtime</scope>
         </dependency>
         <!-- JLine Dependency -->
         <dependency>
