--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ client/version
 snapi-client/version
 snapi-frontend/version
 snapi-truffle/version
+snapi-frontend/src/main/java/raw/compiler/rql2/generated
+
