added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,6 @@ snapi-client/version
 snapi-frontend/version
 snapi-truffle/version
 snapi-parser/version
+python-client/version
 snapi-parser/src/main/java/raw/compiler/rql2/generated
 
