Making antlr4 parser a separate package (#274)
Moved antlr4 parser to separate package

---------

Co-authored-by: Yann Bouzonie <yann@raw-labs.com>

--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,7 @@ client/version
 snapi-client/version
 snapi-frontend/version
 snapi-truffle/version
-snapi-frontend/src/main/java/raw/compiler/rql2/generated
+snapi-parser/version
+python-client/version
+snapi-parser/src/main/java/raw/compiler/rql2/generated
 
