--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -54,6 +54,17 @@ jobs:
         CI_CLEAN: clean
         CI_RELEASE: publishSigned
         CI_SNAPSHOT_RELEASE: publish
+    - name: sbt ci-release snapi-parser
+      run: sbt ci-release
+      working-directory: snapi-parser
+      env:
+        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        CI_CLEAN: clean
+        CI_RELEASE: publishSigned
+        CI_SNAPSHOT_RELEASE: publish
     - name: sbt ci-release snapi-frontend
       run: sbt ci-release
       working-directory: snapi-frontend
@@ -92,6 +103,7 @@ jobs:
       run: |
         echo "UTILS_VER=$(cat utils/version)" >> $GITHUB_ENV
         echo "CLIENT_VER=$(cat client/version)" >> $GITHUB_ENV
+        echo "SNAPI_PARSER_VER=$(cat snapi-parser/version)" >> $GITHUB_ENV
         echo "SNAPI_FRONTEND_VER=$(cat snapi-frontend/version)" >> $GITHUB_ENV
         echo "SNAPI_TRUFFLE_VER=$(cat snapi-truffle/version)" >> $GITHUB_ENV
         echo "SNAPI_CLIENT=$(cat snapi-client/version)" >> $GITHUB_ENV
@@ -104,6 +116,7 @@ jobs:
         body: |
           > will publish utils version: ${{ env.UTILS_VER  }}
           > will publish client version: ${{ env.CLIENT_VER }}
+          > will publish snapi-parser version: ${{ env.SNAPI_PARSER_VER }}
           > will publish snapi-frontend version: ${{ env.SNAPI_FRONTEND_VER }}
           > will publish snapi-truffle version: ${{ env.SNAPI_TRUFFLE_VER }}
           > will publish snapi-client version: ${{ env.SNAPI_CLIENT }}
