--- a/.gitignore
+++ b/.gitignore
@@ -69,5 +69,6 @@ extensions/version
 utils/version
 client/version
 snapi-client/version
+sql-client/version
 snapi-frontend/version
 snapi-truffle/version
