--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,8 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: versions
-          path: ./**/version
+      - run: ls -al -R .
+      - run: ls -al -R ./**/version
       - name: headers
         run: sbt headerCheckAll
         working-directory: ${{ matrix.component }}
@@ -103,7 +104,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: versions
-          path: ./**/version
+          path: ./versions
       - run: sbt test
         working-directory: ${{ matrix.component }}
       - uses: mikepenz/action-junit-report@v3
