--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,7 +77,7 @@ jobs:
         run: sbt javafmtCheckAll
         working-directory: ${{ matrix.component }}
   tests:
-    needs: code-checks
+    needs: build
     strategy:
       fail-fast: false
       matrix:
@@ -109,7 +109,7 @@ jobs:
         with:
           name: versions
       - run: |
-          test_version=$(cat ${{ matrix.component }}/version)
+          test_version=$(cat ./version)
           echo "Testing ${{ matrix.component }} version: $test_version"
           sbt test
         working-directory: ${{ matrix.component }}
