--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,8 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - run: ./rebuild.sh
       - name: upload build artifacts
         uses: actions/upload-artifact@v4
@@ -108,10 +110,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: versions
-      - run: |
+      - name: test
+        run: |
           test_version=$(cat ./version)
           echo "Testing ${{ matrix.component }} version: $test_version"
-          sbt test
+          ./test.sh
         working-directory: ${{ matrix.component }}
       - uses: mikepenz/action-junit-report@v3
         if: success() || failure()
