--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,6 +80,9 @@ jobs:
       - name: java fmt
         run: sbt javafmtCheckAll
         working-directory: ${{ matrix.component }}
+      - name: doc
+        run: sbt doc
+        working-directory: ${{ matrix.component }}
   tests:
     needs: build
     strategy:
