--- a/.github/workflows/sync-deps.yaml
+++ b/.github/workflows/sync-deps.yaml
@@ -34,7 +34,4 @@ jobs:
           BUCKET: ${{ secrets.AWS_RAW_S3_BIN_BUCKET }}
         run: |
           M2_HOME=/home/sbtuser/.m2/repository
-          aws s3 sync $M2_HOME s3://$BUCKET/maven --exclude '*' --include '**kiama**'
-          aws s3 sync $M2_HOME s3://$BUCKET/maven --exclude '*' --include '**jackson**'
-          aws s3 sync $M2_HOME s3://$BUCKET/maven --exclude '*' --include '**scala-logging**'
-          aws s3 sync $M2_HOME s3://$BUCKET/maven --exclude '*' --include '**jwt-core**'
+          sbt createS3SyncScript
