--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -3,4 +3,10 @@ raw.client.sql {
     size = 1000
     duration = 30m
   }
+  pool {
+    max-connections = 10
+    max-lifetime = 30s
+    idle-timeout = 30s
+    connection-timeout = 30s
+  }
 }
