RD-9983 + RD-9483 + RD-8687 all lsp changes - helper branch (#317)
All the latest lsp changes from the tittle PRs

This is the final branch that will be merged in the end

---------

Co-authored-by: Miguel Branco <miguel@raw-labs.com>
Co-authored-by: Benjamin Gaidioz <ben@raw-labs.com>
Co-authored-by: Yann Bouzonie <yann@raw-labs.com>

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ snapi-client/version
 sql-client/version
 snapi-frontend/version
 snapi-truffle/version
+snapi-parser/version
+python-client/version
+snapi-parser/src/main/java/raw/compiler/rql2/generated
+
