--- a/sql-client/src/main/resources/reference.conf
+++ b/sql-client/src/main/resources/reference.conf
@@ -9,5 +9,14 @@ raw.client.sql {
     idle-timeout = 30s
     connection-timeout = 30s
   }
+  # shared connection pool for all users that have not create credentials yet.
+  default-pool {
+    max-connections = 30
+    max-lifetime = 10s
+    idle-timeout = 10s
+    min-idle = 5
+    connection-timeout = 30s
+    expiration-time = 10s
+  }
 
 }
