--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ snapi-parser/version
 python-client/version
 snapi-parser/src/main/java/raw/compiler/rql2/generated
 snapi-parser/src/main/java/raw/client/sql/generated
+
+**/pom.xml.versionsBackup
